Unclean code, working on getting the css situated for the new buttons

--- a/projects/pong/index.html
+++ b/projects/pong/index.html
@@ -81,6 +81,15 @@
             </ul>
         </div>
     </div>
+    <section>
+        <div class="dashboard">
+            <div class="center">
+                <button class="activated" id="freePlay"></button>
+                <button class="deactivated" id="autoPlay"></button>
+                <button class="disabled" id="paddleControl"></button>
+            </div>
+        </div>
+    </section>
 </body>
 
 </html>
