--- a/projects/pong/index.html
+++ b/projects/pong/index.html
@@ -12,84 +12,91 @@
 </head>
 
 <body>
-    <div id="board">
-        <div class="gameItem paddles" id="paddleLeft"></div>
-        <div class="gameItem paddles" id="paddleRight"></div>
-        <div id="ballPit">
-            <div class="gameItem balls" id="ball0"><span>0</span></div>
+    <div class="game">
+        <div class="board">
+            <div class="gameItem paddles" id="paddleLeft"></div>
+            <div class="gameItem paddles" id="paddleRight"></div>
+            <div id="ballPit">
+                <div class="gameItem balls" id="ball0"><span>0</span></div>
+            </div>
+            <div class="gameItem" id="cheatIcon"></div>
         </div>
-        <div class="gameItem" id="cheatIcon"></div>
+        <table class="scoreboard">
+            <tr>
+                <td colspan="6" class="scores" id="p1"><b>P1 Score: <span>000</span></b></td>
+                <td colspan="7" class="scores" id="bounces"><b>Total Bounces: <span>000</span></b></td>
+                <td colspan="6" class="scores" id="p2"><b>P2 Score: <span>000</span></b></td>
+            </tr>
+            <tr>
+                <div> <!-- P1 Score Row -->
+                    <td class="tallyMark p1TallyMark" id="p1Tally1"></td>
+                    <td class="tallyMark p1TallyMark" id="p1Tally2"></td>
+                    <td class="tallyMark p1TallyMark" id="p1Tally3"></td>
+                    <td class="tallyMark p1TallyMark" id="p1Tally4"></td>
+                    <td class="tallyMark p1TallyMark" id="p1Tally5"></td>
+                    <td class="tallyMark p1TallyMark" id="p1Tally6"></td>
+                    <td class="tallyMark p1TallyMark" id="p1Tally7"></td>
+                    <td class="tallyMark p1TallyMark" id="p1Tally8"></td>
+                    <td class="tallyMark p1TallyMark" id="p1Tally9"></td>
+                </div>
+                <div>
+                    <td class="tallyMark winTallyMark"></td> <!-- Win Column -->
+                </div>
+                <div> <!-- P2 Score Row -->
+                    <td class="tallyMark p2TallyMark" id="p2Tally9"></td>
+                    <td class="tallyMark p2TallyMark" id="p2Tally8"></td>
+                    <td class="tallyMark p2TallyMark" id="p2Tally7"></td>
+                    <td class="tallyMark p2TallyMark" id="p2Tally6"></td>
+                    <td class="tallyMark p2TallyMark" id="p2Tally5"></td>
+                    <td class="tallyMark p2TallyMark" id="p2Tally4"></td>
+                    <td class="tallyMark p2TallyMark" id="p2Tally3"></td>
+                    <td class="tallyMark p2TallyMark" id="p2Tally2"></td>
+                    <td class="tallyMark p2TallyMark" id="p2Tally1"></td>
+                </div>
+            </tr>
+        </table>
+        <div>
+            <div class="speeds" id="speeds"><b></b>
+                <ul>
+                    <li class="speeds" id="up"><span></span></li>
+                    <li class="speeds" id="left"><span></span></li>
+                    <li class="speeds" id="down"><span></span></li>
+                    <li class="speeds" id="right"><span></span></li>
+                </ul>
+            </div>
+            <div class="speeds" id="tempSpeeds"><b></b>
+                <ul>
+                    <li class="speeds" id="tempUp"><span></span></li>
+                    <li class="speeds" id="tempLeft"><span></span></li>
+                    <li class="speeds" id="tempDown"><span></span></li>
+                    <li class="speeds" id="tempRight"><span></span></li>
+                </ul>
+            </div>
+            <div class="speeds" id="0Speeds"><b></b>
+                <ul>
+                    <li class="speeds" id="0Up"><span></span></li>
+                    <li class="speeds" id="0Left"><span></span></li>
+                    <li class="speeds" id="0Left2"><span></span></li>
+                    <li class="speeds" id="0Down"><span></span></li>
+                    <li class="speeds" id="0Right"><span></span></li>
+                </ul>
+            </div>
+        </div>
     </div>
-    <table class="scoreboard">
-        <tr>
-            <td colspan="6" class="scores" id="p1"><b>P1 Score: <span>000</span></b></td>
-            <td colspan="7" class="scores" id="bounces"><b>Total Bounces: <span>000</span></b></td>
-            <td colspan="6" class="scores" id="p2"><b>P2 Score: <span>000</span></b></td>
-        </tr>
-        <tr>
-            <div> <!-- P1 Score Row -->
-                <td class="tallyMark p1TallyMark" id="p1Tally1"></td>
-                <td class="tallyMark p1TallyMark" id="p1Tally2"></td>
-                <td class="tallyMark p1TallyMark" id="p1Tally3"></td>
-                <td class="tallyMark p1TallyMark" id="p1Tally4"></td>
-                <td class="tallyMark p1TallyMark" id="p1Tally5"></td>
-                <td class="tallyMark p1TallyMark" id="p1Tally6"></td>
-                <td class="tallyMark p1TallyMark" id="p1Tally7"></td>
-                <td class="tallyMark p1TallyMark" id="p1Tally8"></td>
-                <td class="tallyMark p1TallyMark" id="p1Tally9"></td>
-            </div>
-            <div>
-                <td class="tallyMark winTallyMark"></td> <!-- Win Column -->
-            </div>
-            <div> <!-- P2 Score Row -->
-                <td class="tallyMark p2TallyMark" id="p2Tally9"></td>
-                <td class="tallyMark p2TallyMark" id="p2Tally8"></td>
-                <td class="tallyMark p2TallyMark" id="p2Tally7"></td>
-                <td class="tallyMark p2TallyMark" id="p2Tally6"></td>
-                <td class="tallyMark p2TallyMark" id="p2Tally5"></td>
-                <td class="tallyMark p2TallyMark" id="p2Tally4"></td>
-                <td class="tallyMark p2TallyMark" id="p2Tally3"></td>
-                <td class="tallyMark p2TallyMark" id="p2Tally2"></td>
-                <td class="tallyMark p2TallyMark" id="p2Tally1"></td>
-            </div>
-        </tr>
-    </table>
-    <div>
-        <div class="speeds" id="speeds"><b></b>
-            <ul>
-                <li class="speeds" id="up"><span></span></li>
-                <li class="speeds" id="left"><span></span></li>
-                <li class="speeds" id="down"><span></span></li>
-                <li class="speeds" id="right"><span></span></li>
-            </ul>
+    <div class="dashboard">
+        <div class="relay" id="freePlay">
+            <button class="activated"></button>
+            <p>FreePlay</p>
         </div>
-        <div class="speeds" id="tempSpeeds"><b></b>
-            <ul>
-                <li class="speeds" id="tempUp"><span></span></li>
-                <li class="speeds" id="tempLeft"><span></span></li>
-                <li class="speeds" id="tempDown"><span></span></li>
-                <li class="speeds" id="tempRight"><span></span></li>
-            </ul>
+        <div class="relay" id="autoPlay">
+            <button class="deactivated"></button>
+            <p>AutoPlay</p>
         </div>
-        <div class="speeds" id="0Speeds"><b></b>
-            <ul>
-                <li class="speeds" id="0Up"><span></span></li>
-                <li class="speeds" id="0Left"><span></span></li>
-                <li class="speeds" id="0Left2"><span></span></li>
-                <li class="speeds" id="0Down"><span></span></li>
-                <li class="speeds" id="0Right"><span></span></li>
-            </ul>
+        <div class="relay" id="paddleControl">
+            <button class="disabled"></button>
+            <p>PaddleControl</p>
         </div>
     </div>
-    <section>
-        <div class="dashboard">
-            <div class="center">
-                <button class="activated" id="freePlay"></button>
-                <button class="deactivated" id="autoPlay"></button>
-                <button class="disabled" id="paddleControl"></button>
-            </div>
-        </div>
-    </section>
 </body>
 
 </html>
