Created 3 buttons and had logic between disabling them created

--- a/projects/pong/index.html
+++ b/projects/pong/index.html
@@ -84,16 +84,16 @@
         </div>
     </div>
     <div class="dashboard">
-        <div class="relay" id="freePlay">
-            <button class="activated"></button>
+        <div class="relay">
+            <button class="deactivated" id="freePlay"></button>
             <p>FreePlay</p>
         </div>
-        <div class="relay" id="autoPlay">
-            <button class="deactivated"></button>
+        <div class="relay">
+            <button class="deactivated" id="autoPlay"></button>
             <p>AutoPlay</p>
         </div>
-        <div class="relay" id="paddleControl">
-            <button class="disabled"></button>
+        <div class="relay">
+            <button class="deactivated" id="paddleControl"></button>
             <p>PaddleControl</p>
         </div>
     </div>
