Working on copying over logic for the new cheat interface

--- a/projects/pong/index.html
+++ b/projects/pong/index.html
@@ -85,6 +85,10 @@
     </div>
     <div class="dashboard">
         <div class="relay">
+            <button class="deactivated" id="pause"></button>
+            <p>Pause</p>
+        </div>
+        <div class="relay">
             <button class="deactivated" id="freePlay"></button>
             <p>FreePlay</p>
         </div>
@@ -95,6 +99,18 @@
         <div class="relay">
             <button class="deactivated" id="paddleControl"></button>
             <p>PaddleControl</p>
+        </div>
+        <div class="relay">
+            <button class="deactivated" id="singlePlayer"></button>
+            <p>SinglePlayer</p>
+        </div>
+        <div class="relay">
+            <button class="deactivated" id="multiBall"></button>
+            <p>MultiBall</p>
+        </div>
+        <div class="relay">
+            <button class="deactivated" id="cheatMode"></button>
+            <p>CheatMode</p>
         </div>
     </div>
 </body>
