Making more progress...

--- a/projects/pong/index.html
+++ b/projects/pong/index.html
@@ -89,7 +89,7 @@
             <p>Pause</p>
         </div>
         <div class="relay">
-            <button class="deactivated" id="cheatMode"></button>
+            <button class="disabled" id="cheatMode"></button>
             <p>CheatMode</p>
         </div>
         <div class="relay">
