Working on finding a way to visually tell whether various modes are true or false

--- a/projects/pong/index.html
+++ b/projects/pong/index.html
@@ -84,7 +84,7 @@
         </div>
     </div>
     <div class="dashboard">
-        <div class="relay">
+        <div class="relay pause">
             <button class="deactivated" id="pause"></button>
             <p>Pause</p>
         </div>
