Made the buttons aligned all nice and pretty, and gave the dashboard text a new font

--- a/projects/pong/index.html
+++ b/projects/pong/index.html
@@ -86,31 +86,31 @@
     <div class="dashboard">
         <div class="relay pause">
             <button class="deactivated" id="pause"></button>
-            <p>Pause</p>
+            <p><b>Pause</b></p>
         </div>
         <div class="relay cheatMode">
             <button class="disabled" id="cheatMode"></button>
-            <p>CheatMode</p>
+            <p><b>CheatMode</b></p>
         </div>
         <div class="relay freePlay">
             <button class="deactivated" id="freePlay"></button>
-            <p>FreePlay</p>
+            <p><b>FreePlay</b></p>
         </div>
         <div class="relay autoPlay">
             <button class="deactivated" id="autoPlay"></button>
-            <p>AutoPlay</p>
-        </div>
-        <div class="relay multiBall">
-            <button class="deactivated" id="multiBall"></button>
-            <p>MultiBall</p>
+            <p><b>AutoPlay</b></p>
         </div>
         <div class="relay singlePlayer">
             <button class="deactivated" id="singlePlayer"></button>
-            <p>SinglePlayer</p>
+            <p><b>SinglePlayer</b></p>
+        </div>
+        <div class="relay multiBall">
+            <button class="deactivated" id="multiBall"></button>
+            <p><b>MultiBall</b></p>
         </div>
         <div class="relay paddleControl">
             <button class="deactivated" id="paddleControl"></button>
-            <p>PaddleControl</p>
+            <p><b>PaddleControl</b></p>
         </div>
     </div>
 </body>
