Got the slider for singlePlayer working

--- a/projects/pong/index.html
+++ b/projects/pong/index.html
@@ -103,6 +103,10 @@
         <div class="relay singlePlayer">
             <button class="deactivated" id="singlePlayer"></button>
             <p><b>SinglePlayer</b></p>
+            <label class="switch">
+              <input type="checkbox" id="choosePlayer">
+              <span class="slider round deactivated" id="playerSlider"></span>
+            </label>
         </div>
         <div class="relay multiBall">
             <button class="deactivated" id="multiBall"></button>
