Sounds have been added and credited :D

--- a/projects/pong/index.html
+++ b/projects/pong/index.html
@@ -103,7 +103,7 @@
     </div>
     <div class="dashboard">
         <div class="relay mute">
-            <button class="deactivated" id="mute"></button>
+            <button class="activated" id="mute"></button>
             <p><b>Mute</b></p>
         </div>
         <div class="relay pause">
@@ -138,6 +138,9 @@
             <button class="deactivated" id="paddleControl"></button>
             <p><b>PaddleControl</b></p>
         </div>
+    </div>
+    <div id="attribution">
+        <p><a href="https://freesound.org/people/NoiseCollector/packs/254/">Pong Softsynth</a> by <a href="https://freesound.org/people/NoiseCollector/">NoiseCollector</a> is licenced under <a href="https://creativecommons.org/licenses/by/4.0/">CC BY 4.0</a></p>
     </div>
 </body>
 
