Patched a bug where the paddles didn't snap to a ppf multiple when exiting singlePlayer or autoPlay, and also began work on the multiball button

--- a/projects/pong/index.html
+++ b/projects/pong/index.html
@@ -133,6 +133,8 @@
         <div class="relay multiBall">
             <button class="deactivated" id="multiBall"></button>
             <p><b>MultiBall</b></p>
+            <input type="number" id="ballCount" name="ballCount" min="2" max="50" value="2">
+            <!-- <input type="submit" id="confirmBallCount" value="&#10004"> -->
         </div>
         <div class="relay paddleControl">
             <button class="deactivated" id="paddleControl"></button>
