Congrats! A bunch of spaghetti code has made the cheat mode interface work. Now I've gotta clean it up and make it look pretty and make it all more efficient.

--- a/projects/pong/index.html
+++ b/projects/pong/index.html
@@ -133,7 +133,11 @@
         <div class="relay multiBall">
             <button class="deactivated" id="multiBall"></button>
             <p><b>MultiBall</b></p>
-            <input type="number" id="ballCount" name="ballCount" min="2" max="50" value="2">
+                <input type="number" id="ballCount" name="ballCount" min="2" max="50" value="2">
+                <!-- <p id="label"><b>Balls (2-50)</b></p> -->
+            <div id="label">
+                <label for="ballCount"><b>#Balls</b></label><br><label for="ballCount"><b>(2-50)</b></label>
+            </div>
             <!-- <input type="submit" id="confirmBallCount" value="&#10004"> -->
         </div>
         <div class="relay paddleControl">
