--- a/projects/pong/index.html
+++ b/projects/pong/index.html
@@ -134,11 +134,12 @@
             <button class="deactivated" id="multiBall"></button>
             <p><b>MultiBall</b></p>
                 <input type="number" id="ballCount" name="ballCount" min="2" max="50" value="2">
-                <!-- <p id="label"><b>Balls (2-50)</b></p> -->
             <div id="label">
-                <label for="ballCount"><b>#Balls</b></label><br><label for="ballCount"><b>(2-50)</b></label>
+                <label for="ballCount"><b>#Balls</b></label>
+                <br>
+                <label for="ballCount"><b>(2-50)</b></label>
             </div>
-            <!-- <input type="submit" id="confirmBallCount" value="&#10004"> -->
+            <input type="submit" id="confirmBallCount" value="&#10004">
         </div>
         <div class="relay paddleControl">
             <button class="deactivated" id="paddleControl"></button>
