Finished slaying a lot of bugs in the dashboard, and also got rid of the cheat icon

--- a/projects/pong/index.html
+++ b/projects/pong/index.html
@@ -37,7 +37,7 @@
             <div id="ballPit">
                 <div class="gameItem balls" id="ball0"><span>0</span></div>
             </div>
-            <div class="gameItem" id="cheatIcon"></div>
+            <!-- <div class="gameItem" id="cheatIcon"></div> -->
         </div>
         <table class="scoreboard">
             <tr>
