Working on getting SinglePLayer to not jump

--- a/projects/pong/index.html
+++ b/projects/pong/index.html
@@ -115,7 +115,7 @@
             <p><b>CheatMode</b></p>
         </div>
         <div class="relay freePlay">
-            <button class="deactivated" id="freePlay"></button>
+            <button class="activated" id="freePlay"></button>
             <p><b>FreePlay</b></p>
         </div>
         <div class="relay autoPlay">
@@ -123,11 +123,11 @@
             <p><b>AutoPlay</b></p>
         </div>
         <div class="relay singlePlayer">
-            <button class="deactivated" id="singlePlayer"></button>
+            <button class="activated" id="singlePlayer"></button>
             <p><b>SinglePlayer</b></p>
             <label class="switch">
               <input type="checkbox" id="choosePlayer">
-              <span class="slider round deactivated" id="playerSlider"></span>
+              <span class="slider round activated" id="playerSlider"></span>
             </label>
         </div>
         <div class="relay multiBall">
