--- a/projects/pong/index.html
+++ b/projects/pong/index.html
@@ -115,7 +115,7 @@
             <p><b>CheatMode</b></p>
         </div>
         <div class="relay freePlay">
-            <button class="activated" id="freePlay"></button>
+            <button class="deactivated" id="freePlay"></button>
             <p><b>FreePlay</b></p>
         </div>
         <div class="relay autoPlay">
@@ -123,11 +123,11 @@
             <p><b>AutoPlay</b></p>
         </div>
         <div class="relay singlePlayer">
-            <button class="activated" id="singlePlayer"></button>
+            <button class="deactivated" id="singlePlayer"></button>
             <p><b>SinglePlayer</b></p>
             <label class="switch">
               <input type="checkbox" id="choosePlayer">
-              <span class="slider round activated" id="playerSlider"></span>
+              <span class="slider round deactivated" id="playerSlider"></span>
             </label>
         </div>
         <div class="relay multiBall">
@@ -147,7 +147,7 @@
         </div>
     </div>
     <div id="attribution">
-        <p><a href="https://freesound.org/people/NoiseCollector/packs/254/">Pong Softsynth</a> by <a href="https://freesound.org/people/NoiseCollector/">NoiseCollector</a> is licenced under <a href="https://creativecommons.org/licenses/by/4.0/">CC BY 4.0</a></p>
+        <p><a href="https://freesound.org/people/NoiseCollector/packs/254/" target="_blank">Pong Softsynth</a> by <a href="https://freesound.org/people/NoiseCollector/" target="_blank">NoiseCollector</a> is licenced under <a href="https://creativecommons.org/licenses/by/4.0/" target="_blank">CC BY 4.0</a></p>
     </div>
 </body>
 
