Made some finishing touches on Pong, and also changed which buttons are used for CheatMode, along with some minor code edits, organization, and comment removal. Clean code that is ready to be pushed!

--- a/projects/pong/index.html
+++ b/projects/pong/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
 
+<!-- Port 10046 -->
+
 <head>
     <title>Pong</title>
     <!-- Load CSS files -->
@@ -37,7 +39,6 @@
             <div id="ballPit">
                 <div class="gameItem balls" id="ball0"><span>0</span></div>
             </div>
-            <!-- <div class="gameItem" id="cheatIcon"></div> -->
         </div>
         <table class="scoreboard">
             <tr>
@@ -103,7 +104,7 @@
     </div>
     <div class="dashboard">
         <div class="relay mute">
-            <button class="activated" id="mute"></button>
+            <button class="deactivated" id="mute"></button>
             <p><b>Mute</b></p>
         </div>
         <div class="relay pause">
