New branch for a new project! Starting on a pause menu

--- a/projects/pong/index.html
+++ b/projects/pong/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 
-<!-- Port 10046 -->
+<!-- Port 10049 -->
 
 <head>
     <title>Pong</title>
@@ -33,7 +33,7 @@
     </audio>
 
     <div class="game">
-        <div class="board">
+        <div class="board" id="paused">
             <div class="gameItem paddles" id="paddleLeft"></div>
             <div class="gameItem paddles" id="paddleRight"></div>
             <div id="ballPit">
