Made the pause menu overlay

--- a/projects/pong/index.html
+++ b/projects/pong/index.html
@@ -33,13 +33,14 @@
     </audio>
 
     <div class="game">
-        <div class="board" id="paused">
+        <div class="board">
             <div class="gameItem paddles" id="paddleLeft"></div>
             <div class="gameItem paddles" id="paddleRight"></div>
             <div id="ballPit">
                 <div class="gameItem balls" id="ball0"><span>0</span></div>
             </div>
         </div>
+        <div id="paused"></div>
         <table class="scoreboard">
             <tr>
                 <td colspan="6" class="scores" id="p1"><b>P1 Score: <span>000</span></b></td>
