Added a neat little pause menu! This is actually clean code, I migth do a merge with master

--- a/projects/pong/index.html
+++ b/projects/pong/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 
-<!-- Port 10051 -->
+<!-- Port 10053 -->
 
 <head>
     <title>Pong</title>
@@ -47,51 +47,71 @@
                 <div id="controls">
                     <div class="controls">
                         <p>Player 1 Controls:</p>
-                        <div class="container">
-                            <img src="assets/keyboard-key.png" class="key">
-                            <div class="key-text">W</div>
+                        <div class="row">
+                            <div class="key">
+                                <img src="assets/keyboard-key.png">
+                                <span>W</span>
+                            </div>
                         </div>
-                        <div>
-                            <div class="container-inline">
-                                <img src="assets/keyboard-key.png" class="key">
-                                <div class="key-text">A</div>
+                        <div class="row">
+                            <div class="key">
+                                <img src="assets/keyboard-key.png">
+                                <span>A</span>
                             </div>
-                            <div class="container-inline">
-                                <img src="assets/keyboard-key.png" class="key">
-                                <div class="key-text">S</div>
+                            <div class="key">
+                                <img src="assets/keyboard-key.png">
+                                <span>S</span>
                             </div>
-                            <div class="container-inline">
-                                <img src="assets/keyboard-key.png" class="key">
-                                <div class="key-text">D</div>
+                            <div class="key">
+                                <img src="assets/keyboard-key.png">
+                                <span>D</span>
                             </div>
                         </div>
                     </div>
                     <div class="controls">
                         <p>CheatMode Controls:</p>
-                        <div class="container">
-                            <img src="assets/keyboard-key.png" class="key">
-                            <div class="key-text">I</div>
-                            <!-- <span class="key-text">W</span> -->
+                        <div class="row">
+                            <div class="key">
+                                <img src="assets/keyboard-key.png">
+                                <span>I</span>
+                            </div>
                         </div>
-                        <div class="container">
-                            <img src="assets/keyboard-key.png" class="key">
-                            <div class="key-text">J</div>
-                            <img src="assets/keyboard-key.png" class="key">
-                            <div class="key-text">K</div>
-                            <img src="assets/keyboard-key.png" class="key">
-                            <div class="key-text">L</div>
+                        <div class="row">
+                            <div class="key">
+                                <img src="assets/keyboard-key.png">
+                                <span>J</span>
+                            </div>
+                            <div class="key">
+                                <img src="assets/keyboard-key.png">
+                                <span>K</span>
+                            </div>
+                            <div class="key">
+                                <img src="assets/keyboard-key.png">
+                                <span>L</span>
+                            </div>
                         </div>
                     </div>
                     <div class="controls">
                         <p>Player 2 Controls:</p>
-                        <div>
-                            <img src="assets/keyboard-key.png" class="key">
-                            <!-- <span class="key-text">W</span> -->
+                        <div class="row">
+                            <div class="key">
+                                <img src="assets/keyboard-key.png">
+                                <span>&#129065</span>
+                            </div>
                         </div>
-                        <div>
-                            <img src="assets/keyboard-key.png" class="key">
-                            <img src="assets/keyboard-key.png" class="key">
-                            <img src="assets/keyboard-key.png" class="key">
+                        <div class="row">
+                            <div class="key">
+                                <img src="assets/keyboard-key.png">
+                                <span>&#129064</span>
+                            </div>
+                            <div class="key">
+                                <img src="assets/keyboard-key.png">
+                                <span>&#129067</span>
+                            </div>
+                            <div class="key">
+                                <img src="assets/keyboard-key.png">
+                                <span>&#129066</span>
+                            </div>
                         </div>
                     </div>
                 </div>
