Minor change to cheatMode, getting rid of its controls info now that we have those in the pause menu. Also started the game off as paused so that players can understand the controls

--- a/projects/pong/index.html
+++ b/projects/pong/index.html
@@ -182,7 +182,7 @@
             <p><b>Mute</b></p>
         </div>
         <div class="relay pause">
-            <button class="deactivated" id="pause"></button>
+            <button class="activated" id="pause"></button>
             <p><b>Pause</b></p>
         </div>
         <div class="relay cheatMode">
