Commented out some text in the <audio> tags that would have broken some html/css positioning for users whose browser indeed does not support the audio tag.

--- a/projects/pong/index.html
+++ b/projects/pong/index.html
@@ -17,19 +17,19 @@
     <!-- https://freesound.org/people/NoiseCollector/packs/254/ -->
     <audio id="p1">
         <source src="assets/audio/noisecollector-pong-softsynth/pongblipC5.wav" type="audio/wav">
-        Your browser does not support the audio tag.
+        <!--Your browser does not support the audio tag.-->
     </audio>
     <audio id="p2">
         <source src="assets/audio/noisecollector-pong-softsynth/pongblipG5.wav" type="audio/wav">
-        Your browser does not support the audio tag.
+        <!--Your browser does not support the audio tag.-->
     </audio>
     <audio id="top">
         <source src="assets/audio/noisecollector-pong-softsynth/pongblipE5.wav" type="audio/wav">
-        Your browser does not support the audio tag.
+        <!--Your browser does not support the audio tag.-->
     </audio>
     <audio id="side">
         <source src="assets/audio/noisecollector-pong-softsynth/pongblipAs4.wav" type="audio/wav">
-        Your browser does not support the audio tag.
+        <!--Your browser does not support the audio tag.-->
     </audio>
 
     <div class="game">
