Working on the new dynamic pausemenu. VS 2022 isn't doing what I need it to do, tho, so am gonna go work in gitpod some more again

--- a/projects/pong/index.html
+++ b/projects/pong/index.html
@@ -69,26 +69,36 @@
                         </div>
                     </div>
                     <div class="controls">
-                        <p>CheatMode Controls:</p>
-                        <div class="row">
-                            <div class="key">
-                                <img src="assets/keyboard-key.png">
-                                <span>I</span>
+                        <!--<div id="cheatModeControls">
+                            <p>CheatMode Controls:</p>
+                            <div class="row">
+                                <div class="key">
+                                    <img src="assets/keyboard-key.png">
+                                    <span>I</span>
+                                </div>
                             </div>
-                        </div>
-                        <div class="row">
-                            <div class="key">
-                                <img src="assets/keyboard-key.png">
-                                <span>J</span>
+                            <div class="row">
+                                <div class="key">
+                                    <img src="assets/keyboard-key.png">
+                                    <span>J</span>
+                                </div>
+                                <div class="key">
+                                    <img src="assets/keyboard-key.png">
+                                    <span>K</span>
+                                </div>
+                                <div class="key">
+                                    <img src="assets/keyboard-key.png">
+                                    <span>L</span>
+                                </div>
                             </div>
-                            <div class="key">
+                        </div>-->
+                        <div id="pauseMessage">
+                            <h2>Press</h2>
+                            <div class="key" id="spacebar">
                                 <img src="assets/keyboard-key.png">
-                                <span>K</span>
+                                <span>Space</span>
                             </div>
-                            <div class="key">
-                                <img src="assets/keyboard-key.png">
-                                <span>L</span>
-                            </div>
+                            <h2>to begin!</h2>
                         </div>
                     </div>
                     <div class="controls">
