Got the cheatMode controls toggling. Font size for the new pauseMessage is too small, imo

--- a/projects/pong/index.html
+++ b/projects/pong/index.html
@@ -69,8 +69,8 @@
                         </div>
                     </div>
                     <div class="controls">
-                        <!--<div id="cheatModeControls">
-                            <p>CheatMode Controls:</p>
+                        <div id="cheatModeControls">
+                            <p>Ball Controls:</p>
                             <div class="row">
                                 <div class="key">
                                     <img src="assets/keyboard-key.png">
@@ -91,14 +91,20 @@
                                     <span>L</span>
                                 </div>
                             </div>
-                        </div>-->
+                        </div>
                         <div id="pauseMessage">
-                            <h2>Press</h2>
-                            <div class="key" id="spacebar">
-                                <img src="assets/keyboard-key.png">
-                                <span>Space</span>
+                            <p>Press</p>
+                            <div class="row">
+                                <div class="key" id="spacebar">
+                                    <img src="assets/keyboard-spacebar.png">
+                                    <span>Space</span>
+                                </div>
                             </div>
-                            <h2>to begin!</h2>
+                            <div class="row" id="begin-continue">
+                                <div class="key">
+                                    <span>to begin!</span>
+                                </div>
+                            </div>
                         </div>
                     </div>
                     <div class="controls">
