Actually made the paddleControls transparent initially

--- a/projects/pong/index.html
+++ b/projects/pong/index.html
@@ -48,21 +48,21 @@
                     <div class="controls">
                         <p>Player 1 Controls:</p>
                         <div class="row">
-                            <div class="key">
+                            <div class="key" id="W">
                                 <img src="assets/keyboard-key.png">
                                 <span>W</span>
                             </div>
                         </div>
                         <div class="row">
-                            <div class="key">
+                            <div class="key" id="A" style="display: none;">
                                 <img src="assets/keyboard-key.png">
                                 <span>A</span>
                             </div>
-                            <div class="key">
+                            <div class="key" id="S">
                                 <img src="assets/keyboard-key.png">
                                 <span>S</span>
                             </div>
-                            <div class="key">
+                            <div class="key" id="D" style="display: none;">
                                 <img src="assets/keyboard-key.png">
                                 <span>D</span>
                             </div>
@@ -72,21 +72,21 @@
                         <div id="cheatModeControls">
                             <p>Ball Controls:</p>
                             <div class="row">
-                                <div class="key">
+                                <div class="key" id="I">
                                     <img src="assets/keyboard-key.png">
                                     <span>I</span>
                                 </div>
                             </div>
                             <div class="row">
-                                <div class="key">
+                                <div class="key" id="J">
                                     <img src="assets/keyboard-key.png">
                                     <span>J</span>
                                 </div>
-                                <div class="key">
+                                <div class="key" id="K">
                                     <img src="assets/keyboard-key.png">
                                     <span>K</span>
                                 </div>
-                                <div class="key">
+                                <div class="key" id="L">
                                     <img src="assets/keyboard-key.png">
                                     <span>L</span>
                                 </div>
@@ -110,21 +110,21 @@
                     <div class="controls">
                         <p>Player 2 Controls:</p>
                         <div class="row">
-                            <div class="key">
+                            <div class="key" id="up">
                                 <img src="assets/keyboard-key.png">
                                 <span>&#129065</span>
                             </div>
                         </div>
                         <div class="row">
-                            <div class="key">
+                            <div class="key" id="left" style="display: none;">
                                 <img src="assets/keyboard-key.png">
                                 <span>&#129064</span>
                             </div>
-                            <div class="key">
+                            <div class="key" id="down">
                                 <img src="assets/keyboard-key.png">
                                 <span>&#129067</span>
                             </div>
-                            <div class="key">
+                            <div class="key" id="right" style="display: none;">
                                 <img src="assets/keyboard-key.png">
                                 <span>&#129066</span>
                             </div>
