--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
     <title>ChrisChips's Amazing Website</title>
     <meta name="author" content="Christian Bankovic">
     <meta name="description" content="The main page for my website.">
+    <meta charset="utf-8" />
 
     <style>
         body {
@@ -122,6 +123,8 @@
 </head>
 
 <body>
+    <script src="https://p.trellocdn.com/power-up.min.js"></script>
+    <script src="/trello/client.js"></script>
     <div id="all-contents">
         <nav>
             <header>ChrisChips's Amazing Website</header>
